--- a/hira-v4.html
+++ b/hira-v4.html
@@ -16,6 +16,8 @@
             background-color: #f4f7f6;
             color: #333;
             font-size: 16px; /* Base font size */
+            margin: 0;
+            padding: 0;
         }
 
         .container {
@@ -26,12 +28,13 @@
             text-align: center;
             width: 90%;
             max-width: 800px; /* Max width for better readability on large screens */
+            margin-top: 2em;
         }
 
         h1, h2 {
             color: #2c3e50;
         }
-        h1 { margin-bottom: 15px; }
+        h1 { margin-bottom: 15px; margin-top: 0; }
         h2 { margin-bottom: 25px; font-size: 1.8em; }
 
 
@@ -194,7 +197,7 @@
     <div class="container">
         <div id="selectionScreen" class="active">
             <h1>Learn Hiragana</h1>
-            <h2>Choose Columns to Practice</h2>
+            <!-- <h2>Choose Columns to Practice</h2> -->
             <div class="check-all-container">
                 <label><input type="checkbox" id="checkAllColumns"> Check / Uncheck All</label>
             </div>
