--- a/hira.html
+++ b/hira.html
@@ -514,7 +514,9 @@
 		const placeholderText = romajiInput.getAttribute('placeholder');
 
 		function handleSkipped(e) {
-			if ('Enter' === e.key) {
+			if (' ' === e.key) {
+				speakJapanese(currentWordHiragana);
+			} else if ('Enter' === e.key) {
 				if (wordsAttempted >= totalWordsPerRound) {
 					showScoreScreen();
 				} else {
