--- a/hira.html
+++ b/hira.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" sizes="32x32 64x64" />
 	<title>Hiragana Learner</title>
 	<style>
 		body {
